--- a/tmpl/index.tt
+++ b/tmpl/index.tt
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>tokuhirom&#39;s blog</title>
+<title>[% c.title %]</title>
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -12,13 +12,11 @@ hgroup, menu, nav, section { display: block; }
 </style>
 </head>
 <body>
-
+[% FOR entry IN entries %]
 <section>
-    <h1>ぶろぐはじめてみる
-</h1>
-    <p>Octopress おもしろいなーとおもったけど、なんか自分でつくったほうがたのしげかなーなんておもったりしてしまったので、自分でつくってみる。</p>
-
+    <h1>[% entry.title %]</h1>
+    [% entry.html %]
 </section>
-
+[% END %]
 </body>
 </html>
