--- a/tmpl/index.tt
+++ b/tmpl/index.tt
@@ -3,20 +3,21 @@
 <head>
 <meta charset="utf-8" />
 <title>[% c.title %]</title>
+<link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
+<script src="js/less-1.1.4.min.js" type="text/javascript"></script>
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<style>
-article, aside, details, figcaption, figure, footer, header,
-hgroup, menu, nav, section { display: block; }
-</style>
 </head>
 <body>
-[% FOR entry IN entries %]
-<section>
-    <h1>[% entry.title %]</h1>
-    [% entry.html %]
-</section>
-[% END %]
+<div class="container">
+    <h1>[% c.title %]</h1>
+    [% FOR entry IN entries %]
+    <section>
+        <h1>[% entry.title %]</h1>
+        [% entry.html %]
+    </section>
+    [% END %]
+</div>
 </body>
 </html>
