--- a/tmpl/index.tt
+++ b/tmpl/index.tt
@@ -4,20 +4,44 @@
 <meta charset="utf-8" />
 <title>[% c.title %]</title>
 <link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
+<link rel="stylesheet/less" type="text/css" href="less/blog.less">
+<link rel="stylesheet" type="text/css" href="google-code-prettify/prettify.css">
 <script src="js/less-1.1.4.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+<script src="google-code-prettify/prettify.js" type="text/javascript"></script>
+<script>
+    $(function() {
+        prettyPrint();
+    });
+</script>
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+<link href='http://fonts.googleapis.com/css?family=Poller+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="container">
-    <h1>[% c.title %]</h1>
+<div class="container-fluid">
+    <header>
+        <h1>[% c.title %]</h1>
+    </header>
+    <div class="sidebar">
+        <ul>
+            <li><a href="https://metacpan.org/author/TOKUHIROM">cpan</a></li>
+            <li><a href="https://github.com/tokuhirom/">giithub</a></li>
+        </ul>
+        <address class="vcard author">
+            <a href="http://64p.org/" class="fn">tokuhirom</a>
+        </address>
+    </div>
+    <div class="content hfeed">
     [% FOR entry IN entries %]
-    <section>
-        <h1>[% entry.title %]</h1>
-        [% entry.html %]
+    <section class="entry clearfix hentry">
+        <h1 class="entry-title">[% entry.title %]</h1>
+        <div class="entry-content">[% entry.html %]</div>
+        <span class="updated mtime"><a class="bookmark" rel="bookmark">[% entry.mtime_piece.strftime('%Y-%m-%d(%a) %H:%M') %]</a></span>
     </section>
     [% END %]
+    </div>
 </div>
 </body>
 </html>
