--- a/less/blog.less
+++ b/less/blog.less
@@ -23,6 +23,8 @@ h1 {
 body {
     background-color: #FF22C3;
     height: 100%;
+    min-height: 100%;
+    height:auto !important;
 }
 
 .clearfix:after {  
