--- a/tmpl/_layout.tt
+++ b/tmpl/_layout.tt
@@ -6,6 +6,7 @@
 <link rel="stylesheet/less" type="text/css" href="[% uri_for('less/bootstrap.less') %]">
 <link rel="stylesheet/less" type="text/css" href="[% uri_for('less/blog.less') %]">
 <link rel="stylesheet" type="text/css" href="[% uri_for('google-code-prettify/prettify.css') %]">
+<link rel="alternate" type="application/rss+xml" title="RSS" href="[% uri_for('index.rss') %]" />
 <script src="[% uri_for('js/less-1.1.4.min.js') %]" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
 <script src="[% uri_for('google-code-prettify/prettify.js') %]" type="text/javascript"></script>
